--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "knex": "^3.0.1",
+    "pg": "^8.11.3",
+    "zod": "^3.22.4"
   }
 }
