--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint",
     "knex": "knex init -x ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migration:make": "knex migrate:make $1 -x ts"
+    "migration:make": "knex migrate:make $1 -x ts",
+    "migration:latest": "knex migrate:latest",
+    "migration:rollback": "knex migrate:rollback"
   },
   "keywords": [],
   "author": "",
