--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
     "@types/http-errors": "^2.0.2",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.8.6",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "eslint": "^8.51.0",
@@ -37,6 +38,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.0.1",
     "pg": "^8.11.3",
     "zod": "^3.22.4"
